org/kermeta/language/org.kermeta.language.checker/src/test/resources/resolved/invalid/GenericBounds/GenericBounds_VariableDecl/project.kp
resource library_standard ="platform:/plugin/org.kermeta.language.library.standard" alternative "mvn:org.kermeta.language/language.library.standard/2.0.99-SNAPSHOT"
importProject library_standard
project GenericBounds_VariableDecl {
	import "${project.baseUri}/004_GenericBounds_VariableDecl.kmt"
}
